# coating-process-mcp-advisor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
clients/claude-code/: mcp.example.json
clients/codex/: config.example.toml
clients/generic/: mcp-server-config.example.json
docs/: architecture.md  examples.md  limitations.md  setup_claude_code.md  setup_codex.md  tools.md
examples/: expected_results.yaml  scenarios.yaml
skills/: coating_process_advisor_skill.md
src/coating_mcp/: __init__.py  server.py
src/coating_mcp/cli/: __init__.py  run_examples.py
src/coating_mcp/schemas/: __init__.py  tool_inputs.py  tool_outputs.py
src/coating_mcp/tools/: __init__.py  coating_thickness.py  process_range.py  solvent_adjustment.py  unit_conversion.py  viscosity_risk.py
tests/: test_coating_thickness.py  test_process_range.py  test_solvent_adjustment.py  test_unit_conversion.py  test_viscosity_risk.py
